fixed overflowing dataset tooltip

--- a/css/app.css
+++ b/css/app.css
@@ -56,6 +56,12 @@ body {
     min-width: 100px;
     width: auto;
     margin: 0px;
+    white-space: nowrap;
+}
+
+.ds-tooltip li{
+    overflow-x: hidden;
+    text-overflow: ellipsis;
 }
 
 .ds-tooltip .modal-body{
